# entt-test

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
Docs/DevLog/: 2023_02_19.md  2023_02_21.md  2023_02_28.md  2023_03_07.md
Includes/: App.h  Components.h  Mina.h  pch.h  pch.hpp
Includes/Commons/: Constants.hpp  Logger.h  Singleton.hpp  Tags.hpp  Type.hpp
Includes/Components/: Bone.hpp  Keyframe.hpp  Log.hpp  State.hpp  Transform.hpp
Includes/Components/Render/: MeshComponent.hpp
Includes/Core/: KeySet.hpp
Includes/Editor/: Editor.h  Layer.hpp  Window.h
Includes/Editor/Layers/: SceneLayer.h
Includes/Editor/Platform/: GlfwGLWindow.h
Includes/Engine/: pch.hpp
Includes/Engine/Commons/: KeySet.hpp  Logger.h  Type.hpp
Includes/Engine/Components/: Keyframe.hpp  TransformComponent.hpp  UniformBufferDatas.hpp
Includes/Engine/Components/Render/: Bone.hpp  MeshComponent.hpp
Includes/Engine/Core/: Command.hpp  KeySet.hpp  Singleton.hpp
Includes/Engine/Helpers/: MathHelper.hpp
Includes/Engine/Helpers/Entity/: EntityHelper.h
Includes/Engine/Helpers/Resources/: KeyframeExportHelper.h  ModelImporter.h
Includes/Engine/Render/: Camera.h  DrawCommand.hpp  Framebuffer.hpp  FramebufferFactory.hpp  Mesh.h  MeshFactory.hpp  RenderAPI.h  Scene.h  Shader.h  ShaderManager.h  Texture.h  TextureFactory.hpp  UniformBuffer.hpp
Includes/Engine/Render/GL/: GLBuffers.hpp  GLDrawCommand.h  GLMesh.h  GLShader.h  GLUniformBuffer.h
Includes/Engine/Systems/: RenderSystem.h
Includes/Helpers/: MathHelper.hpp
Includes/Helpers/Render/: RenderHelper.h  RenderHelpers.hpp
Includes/Helpers/Resources/: ModelImporter.h
Includes/Render/: DrawCommand.hpp  Framebuffer.hpp  FramebufferFactory.hpp  Mesh.h  MeshFactory.hpp  PostProcessFramebuffer.hpp  Render.hpp  RenderAPI.h  Scene.h  Shader.h  Shader.hpp  Texture.h  UniformBuffer.hpp  Window.h
Includes/Render/GL/: GLDrawCommand.h  GLFramebuffer.h  GLFramebufferFactory.h  GLMesh.h  GLMeshFactory.h  GLShader.h  GLTexture.h  GLTextureFactory.h  GLUniformBuffer.h
Includes/Render/Window/: GlfwGLWindow.h
Includes/Systems/: RenderSystem.h  RenderSystems.h
Includes/components/: Log.h
Resources/Shaders/glsl/: DynamicMesh.vert  PhongLight.frag  SimpleFramebuffer.frag  StaticMesh.vert
Sources/: App.cpp  CMakeLists.txt  Mina.cpp  main.cpp
Sources/Commons/: Logger.cpp
Sources/Editor/: Editor.cpp  Window.cpp
Sources/Editor/Layers/: SceneLayer.cpp
Sources/Editor/Platform/: GlfwGLWindow.cpp
Sources/Engine/: CMakeLists.txt
Sources/Engine/Commons/: Logger.cpp
Sources/Engine/Helpers/Entity/: EntityHelper.cpp
Sources/Engine/Helpers/Resources/: ModelExporter.cpp  ModelImporter.cpp
Sources/Engine/Render/: Camera.cpp  Mesh.cpp  RenderAPI.cpp  Scene.cpp  Shader.cpp  Texture.cpp  Window.cpp
Sources/Engine/Render/GL/: GLDrawCommand.cpp  GLFramebuffer.cpp  GLFramebufferFactory.cpp  GLMesh.cpp  GLMeshFactory.cpp  GLShader.cpp  GLTexture.cpp  GLTextureFactory.cpp  GLUniformBuffer.cpp
Sources/Engine/Render/Window/: GlfwGLWindow.cpp
Sources/Engine/Systems/: RenderSystem.cpp
Sources/Helpers/Render/: RenderHelper.cpp
Sources/Render/: Camera.cpp  Mesh.cpp  RenderAPI.cpp  Scene.cpp  Shader.cpp  Texture.cpp
Sources/Render/GL/: GLDrawCommand.cpp  GLFramebuffer.cpp  GLFramebufferFactory.cpp  GLMesh.cpp  GLMeshFactory.cpp  GLShader.cpp  GLTexture.cpp  GLTextureFactory.cpp
Sources/Systems/: RenderSystem.cpp
include/: Components.h  pch.h
include/components/: Mesh.h  Transform.h
include/components/anim/: Bone.h  Keyframe.h  Skeleton.h
src/: CMakeLists.txt  Mina.cpp  main.cpp
src/components/: transform.h
